Document some extra requirements for working with JDK 16+
- Anticipates the merge of https://github.com/gocd/gocd/pull/9818 which has more details
- fixes some typos
- updates the requirements per current server